# docs/swagger.yaml
@@ -17,6 +17,11 @@ definitions:
       data:
         $ref: '#/definitions/github_com_bappeda-dev-team_penetapan-service_internal_individu_web.SyncPenetapanResponse'
     type: object
+  github_com_bappeda-dev-team_penetapan-service_internal_individu_web.Response-string:
+    properties:
+      data:
+        type: string
+    type: object
   github_com_bappeda-dev-team_penetapan-service_internal_individu_web.Response-web_RekinIndividuResponse:
     properties:
       data:
@@ -183,6 +188,11 @@ definitions:
     properties:
       data:
         $ref: '#/definitions/web.TujuanPenetapanPemdaResponse'
+    type: object
+  github_com_bappeda-dev-team_penetapan-service_internal_pemda_web.Response-web_TujuanSasaranPenetapanPemdaResponse:
+    properties:
+      data:
+        $ref: '#/definitions/web.TujuanSasaranPenetapanPemdaResponse'
     type: object
   github_com_bappeda-dev-team_penetapan-service_internal_pemda_web.SyncPenetapanRequest:
     properties:
@@ -772,6 +782,9 @@ definitions:
       kode_sasaran_pemda:
         example: SAS-PEM-1
         type: string
+      kode_tujuan_pemda:
+        example: TUJ-PEM-1
+        type: string
       periode:
         example: 2025-2030
         type: string
@@ -1051,6 +1064,51 @@ definitions:
         example: 1
         type: integer
     type: object
+  web.TujuanSasaranPenetapanPemdaResponse:
+    properties:
+      is_locked:
+        example: true
+        type: boolean
+      tahun_aktif:
+        example: 2025
+        type: integer
+      tujuan_pemdas:
+        items:
+          $ref: '#/definitions/web.TujuanWithSasaranPemdaResponse'
+        type: array
+      versi:
+        example: 1
+        type: integer
+    type: object
+  web.TujuanWithSasaranPemdaResponse:
+    properties:
+      id:
+        example: 1
+        type: integer
+      indikators:
+        items:
+          $ref: '#/definitions/web.IndikatorPemdaPenetapanResponse'
+        type: array
+      kode_tujuan_pemda:
+        example: TUJ-PEM-1
+        type: string
+      misi:
+        example: Misi Kota 1
+        type: string
+      periode:
+        example: 2025-2030
+        type: string
+      sasaran_pemdas:
+        items:
+          $ref: '#/definitions/web.SasaranPemdaResponse'
+        type: array
+      tujuan_pemda:
+        example: Tujuan Pemda 1
+        type: string
+      visi:
+        example: Terpenuhinya ...
+        type: string
+    type: object
 info:
   contact:
     name: Kertaskerja Dev Team
@@ -1115,6 +1173,37 @@ paths:
           schema:
             $ref: '#/definitions/github_com_bappeda-dev-team_penetapan-service_internal_individu_web.ErrorResponse'
       summary: Get rencana kinerja individu penetapan
+      tags:
+      - Individu
+  /individu/rekin/archive:
+    put:
+      consumes:
+      - application/json
+      description: Arsipkan data pk penetapan berdasarkan id_pegawai, kode OPD dan
+        tahun penetapan
+      parameters:
+      - description: Payload sync penetapan individu
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_bappeda-dev-team_penetapan-service_internal_individu_web.SyncPenetapanRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/github_com_bappeda-dev-team_penetapan-service_internal_individu_web.Response-string'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_bappeda-dev-team_penetapan-service_internal_individu_web.ValidationErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_bappeda-dev-team_penetapan-service_internal_individu_web.ErrorResponse'
+      summary: Archive Rekin individu
       tags:
       - Individu
   /individu/rekin/sync:
@@ -1614,6 +1703,35 @@ paths:
           schema:
             $ref: '#/definitions/github_com_bappeda-dev-team_penetapan-service_internal_pemda_web.ErrorResponse'
       summary: Get tujuan Pemda penetapan
+      tags:
+      - Pemda
+  /pemda/tujuan-with-sasaran:
+    get:
+      consumes:
+      - application/json
+      description: Mengambil snapshot tujuan dan sasaran Pemda aktif berdasarkan tahun
+      parameters:
+      - description: Tahun Penetapan
+        in: query
+        name: tahun
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/github_com_bappeda-dev-team_penetapan-service_internal_pemda_web.Response-web_TujuanSasaranPenetapanPemdaResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_bappeda-dev-team_penetapan-service_internal_pemda_web.ValidationErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_bappeda-dev-team_penetapan-service_internal_pemda_web.ErrorResponse'
+      summary: Get tujuan with sasaran Pemda penetapan
       tags:
       - Pemda
   /pemda/tujuan/sync:
